[package]
name = "mlscan"
version = "0.2.2"
edition = "2021"
description = "Machine learning-enhanced port scanner with adaptive performance"
license = "MIT"
repository = "https://github.com/exec/mlscan-rs"
readme = "README.md"
keywords = ["network", "security", "scanner", "port", "machine-learning"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
tokio = { version = "1.40", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
socket2 = "0.5"
pnet = "0.35"
indicatif = "0.17"
colored = "2.1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ipnet = "2.9"
dirs = "5.0"
async-trait = "0.1"
thiserror = "1.0"
regex = "1.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "securitybaseapi", "winnt", "handleapi"] }

[dev-dependencies]
tempfile = "3.13"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[package.metadata.deb]
maintainer = "MLScan-RS <noreply@example.com>"
copyright = "2025, MLScan-RS Contributors"
license-file = ["LICENSE", "4"]
extended-description = """\
Machine learning-enhanced port scanner with adaptive performance.
Supports TCP SYN/Connect/FIN/XMAS/NULL scans, UDP scanning,
CIDR ranges, multiple output formats, and real adaptive learning."""
depends = "$auto"
section = "net"
priority = "optional"
assets = [
    ["target/release/mlscan", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/mlscan/", "644"],
    ["install.sh", "usr/share/doc/mlscan/", "755"],
    ["uninstall.sh", "usr/share/doc/mlscan/", "755"],
]
